Add Device Authorization Grant / Flow
RFC 8628 OAuth 2.0 Device Authorization Grant defines an
OAuth2 flow that is suitable for connected but input- or
user-agent limited devices. These include devices such as
televisions, game consoles, IoT devices, and others.

This commit adds support for this flow by introducing
a new QOAuth2DeviceAuthorizationFlow class.

[ChangeLog][OAuth2] Added new QOAuth2DeviceAuthorizationFlow
class that implements support for OAuth2 device authorization
grant.

Task-number: QTBUG-130611
Change-Id: Ie75baabe2bde8f61557d910b9623d4cc54e97ebb
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Magdalena Stojek <magdalena.stojek@qt.io>
Reviewed-by: Jesus Fernandez <jsfdez@gmail.com>

--- a/src/oauth/CMakeLists.txt
+++ b/src/oauth/CMakeLists.txt
@@ -15,6 +15,8 @@ qt_internal_add_module(NetworkAuth
         qoauth1.cpp qoauth1.h qoauth1_p.h
         qoauth1signature.cpp qoauth1signature.h qoauth1signature_p.h
         qoauth2authorizationcodeflow.cpp qoauth2authorizationcodeflow.h qoauth2authorizationcodeflow_p.h
+        qoauth2deviceauthorizationflow.cpp qoauth2deviceauthorizationflow.h
+        qoauth2deviceauthorizationflow_p.h
         qoauthglobal.h
         qoauthhttpserverreplyhandler.cpp qoauthhttpserverreplyhandler.h qoauthhttpserverreplyhandler_p.h
         qoauthoobreplyhandler.cpp qoauthoobreplyhandler.h qoauthoobreplyhandler_p.h
