Update OAuth2 overview doc to include network request modification
The overview documentation illustrates customization and
modification endpoints. Since Qt 6.9 these will now also
include the ability to modify network requests. Also rename
the doc image files so that it will be easier to distinguish
them from (upcoming) device flow images.

Amends: 235f475c560224295facb5473034e6d4d0188c95

Task-number: QTBUG-130844
Change-Id: I52c61558f975d5e908a8e808d3091a278fdc91b9
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -29,8 +29,7 @@ SPDX-License-Identifier = "LicenseRef-Qt-Commercial OR BSD-3-Clause"
 
 [[annotations]]
 path = ["**.qdocconf",
-        "src/oauth/doc/images/oauth2-flow-details.webp",
-        "src/oauth/doc/images/oauth2-stages.webp"]
+        "src/oauth/doc/images/**.webp"]
 comment = "documentation"
 precedence = "closest"
 SPDX-FileCopyrightText = "Copyright (C) 2024 The Qt Company Ltd."
