--- a/src/oauth/doc/snippets/CMakeLists.txt
+++ b/src/oauth/doc/snippets/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(networkauth_oauth_snippets)
 
-find_package(Qt6 REQUIRED COMPONENTS Core NetworkAuth Gui Quick Widgets)
-find_package(Qt6 OPTIONAL_COMPONENTS WebEngineWidgets WebEngineQuick QUIET)
+find_package(Qt6 REQUIRED COMPONENTS Core NetworkAuth Gui Widgets)
+find_package(Qt6 OPTIONAL_COMPONENTS Quick WebEngineWidgets WebEngineQuick QUIET)
 
 qt_standard_project_setup(REQUIRES 6.9)
 
@@ -25,11 +25,10 @@ target_link_libraries(networkauth_oauth_snippets
         Qt6::Core
         Qt6::NetworkAuth
         Qt6::Gui
-        Qt6::Quick
         Qt6::Widgets
 )
 
-if(TARGET Qt::WebEngineWidgets)
+if(TARGET Qt6::WebEngineWidgets)
     target_link_libraries(networkauth_oauth_snippets
         PRIVATE
             Qt6::WebEngineWidgets
@@ -38,9 +37,10 @@ else()
     message("QtWebEngineWidgets not available, using QWebEngineView as user-agent not possible")
 endif()
 
-if(TARGET Qt::WebEngineQuick)
+if(TARGET Qt6::Quick AND TARGET Qt6::WebEngineQuick)
     target_link_libraries(networkauth_oauth_snippets
         PRIVATE
+            Qt6::Quick
             Qt6::WebEngineQuick
     )
 else()
@@ -66,11 +66,13 @@ else()
             "${JWT_CPP_INCLUDE_DIR}/jwt-cpp/jwt.h are available)")
 endif()
 
-qt_add_qml_module(networkauth_oauth_snippets
-    URI OAuthSnippets
-    VERSION 1.0
-    SOURCES
-        src_oauth_replyhandlers_p.h src_oauth_replyhandlers.cpp
-    QML_FILES
-        MainWindow.qml
-)
+if(TARGET Qt6::Quick AND TARGET Qt6::WebEngineQuick)
+    qt_add_qml_module(networkauth_oauth_snippets
+        URI OAuthSnippets
+        VERSION 1.0
+        SOURCES
+            src_oauth_replyhandlers_p.h src_oauth_replyhandlers.cpp
+        QML_FILES
+            MainWindow.qml
+    )
+endif()
