Get rid of QPair and mark the module as QPair free
Amends 8e5e1012f9a9a9f01a12f631a3ed34570b6a4c5c which only cleaned up
the public headers.

Task-number: QTBUG-115841
Pick-to: 6.9 6.8
Change-Id: I16399e3ced49b91134e68c351f190720f88c3044
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>

--- a/src/oauth/CMakeLists.txt
+++ b/src/oauth/CMakeLists.txt
@@ -20,6 +20,8 @@ qt_internal_add_module(NetworkAuth
         qoauthglobal.h
         qoauthhttpserverreplyhandler.cpp qoauthhttpserverreplyhandler.h qoauthhttpserverreplyhandler_p.h
         qoauthoobreplyhandler.cpp qoauthoobreplyhandler.h qoauthoobreplyhandler_p.h
+    DEFINES
+        QT_NO_QPAIR
     LIBRARIES
         Qt::CorePrivate
     PUBLIC_LIBRARIES
